# BayesicForceFields

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  SUPPORT.md  environment.yaml  environment.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/workflows/: checks.yml  docs.yml  publish.yml
bff/: README.md  __init__.py  bff.py  cli.py  data.py  plotting.py  postprocessing.py  structures.py  tools.py  topology.py
bff/bayes/: __init__.py  effective_observations.py  gaussian_process.py  inference.py  kernels.py  learning.py  likelihoods.py  means.py  posterior.py  priors.py  results.py  utils.py
bff/data/ff/: defaults-amber.itp  defaults-c36.itp
bff/domain/: __init__.py  bias.py  sample.py  specs.py  trainset.py
bff/evaluation/: metrics.py  rdf.py  trajectory.py
bff/io/: __init__.py  colvars.py  commands.py  cp2k.py  cp2k_collect.py  extxyz.py  logs.py  mdp.py  plumed.py  progress.py  schedulers.py  utils.py
bff/mcmc/: __init__.py  convergence.py  proposal.py  sampler.py
bff/qoi/: __init__.py  analysis.py  data.py  hbonds.py  rdf.py  restraints.py  routines.py  trajectory.py
bff/scoring/: hbonds.py
bff/workflow/: analyze.py  dogaff.py  runsims.py  simulate.py
bff/workflow/config_files/: generate.yaml
bff/workflows/: analyze_qoi.py  configs.py  examples.py  initialize.py  learn.py  md.py  optimize.py  prepare.py  qoi.py  reference.py  runsims.py  simulate.py  train.py  trainset.py  validate.py
bff/workflows/_shared/: campaign.py  config.py  preparation.py  scheduler.py
bff/workflows/analyze/: config.py  main.py
bff/workflows/config_files/: 01-prepare.yaml  analyze.yaml  test.yaml
bff/workflows/evaluate_snapshots/: __init__.py  __main__.py  config.py  main.py
bff/workflows/fit/: __main__.py  config.py  main.py
bff/workflows/learn/: config.py  main.py
bff/workflows/md/: __init__.py  __main__.py  config.py  main.py
bff/workflows/prepare_assets/: __init__.py  __main__.py  config.py  main.py
bff/workflows/reference/: __init__.py  __main__.py  config.py  main.py
bff/workflows/sample/: config.py  main.py
bff/workflows/validate/: config.py  main.py
docs/: architecture.md  changelog.md  cli.md  development.md  index.md  installation.md
docs/configuration/: analyze.md  build.md  evaluate-snapshots.md  fit.md  learn.md  prepare-assets.md  prepare.md  qoi.md  reference.md  sample.md  simulate.md  train.md  trainset.md  validate.md
docs/examples/: acetate.md  arbitrary-data.md  index.md  neon-mie-lgpmd.md
examples/: .gitignore
examples/acetate/: .gitignore  README.md  run-build.sh
examples/acetate/01-prepare/: README.md  ace.gro  config.yaml  config.yml  mdout.mdp  topol-ions.top  topol.top
examples/acetate/01-prepare-colvars/: config.yaml
examples/acetate/02-reference/: README.md  config-local.yaml  config-slurm.yaml
examples/acetate/02-reference-data/: README.md  config-local.yaml  config-slurm.yaml
examples/acetate/02-reference-trjs/: .ace-000.xtc_offsets.npz  .ace-001.xtc_offsets.npz  .ace-002.xtc_offsets.npz  ace-000.xtc  ace-001.xtc  ace-002.xtc  pos-002.xtc
examples/acetate/03-qoi/: config.yaml
examples/arbitrary-data/: .gitignore  README.md  arbitrary-data.ipynb
examples/neon-mie-lgpmd/: README.md  SOURCE.md  neon-mie-inference.ipynb
tests/: test_examples.py  test_plotting.py  test_topology.py
tests/bayes/: test_effective_observations.py  test_gaussian_process.py  test_learning_problem.py  test_likelihoods.py  test_priors_posterior.py  test_results.py  test_utils.py
tests/domain/: test_specs.py
tests/io/: _fake_mdanalysis.py  test_cp2k.py  test_cp2k_collect.py  test_logs.py  test_mdp.py
tests/mcmc/: test_convergence.py  test_proposal.py  test_sampler.py
tests/qoi/: test_data.py
tests/workflows/: test_charge_constraints.py  test_configs.py  test_regressions.py  test_scheduler.py
(+1374 files in other folders)
