[project]
name = "BayesicForceFields"
version = "0.1.0"
description = "Bayesian optimization of molecular force fields"
authors = [
  { name="Vojtech Kostal", email="vojtakostal8@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
bff = "bff.cli:app"

[build-system]
requires = ["setuptools>=61", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bff"]
include-package-data = true