[project]
name = "BayesicForceFields"
version = "0.1.0"
description = "Bayesian optimization of molecular force fields"
authors = [
  { name="Vojtech Kostal", email="vojtakostal8@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "gmxtop",
  "matplotlib",
  "MDAnalysis",
  "numpy",
  "PyYAML",
  "scipy",
  "typer",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
bff = "bff.cli:app"

[project.optional-dependencies]
notebook = [
  "ipykernel",
  "ipython",
  "ipywidgets",
]
dev = [
  "build",
  "pytest",
]

[build-system]
requires = ["setuptools>=61", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
