[project]
name = "bfflearn"
version = "0.1.0.dev3"
description = "Bayesian workflows for fixed-charge molecular force fields"
authors = [
  { name="Vojtech Kostal", email="vojtakostal8@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "gmxtopology",
  "matplotlib",
  "MDAnalysis",
  "numpy",
  "PyYAML",
  "scipy",
  "typer",
]
keywords = [
  "bayesian-inference",
  "force-fields",
  "gromacs",
  "molecular-dynamics",
  "physical-chemistry",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Documentation = "https://vojtechkostal.github.io/BayesicForceFields/"
Homepage = "https://github.com/vojtechkostal/BayesicForceFields"
Issues = "https://github.com/vojtechkostal/BayesicForceFields/issues"
Publication = "https://pubs.acs.org/doi/10.1021/acs.jctc.5c02051"
Preprint = "https://arxiv.org/abs/2511.05398"
Releases = "https://github.com/vojtechkostal/BayesicForceFields/releases"
Repository = "https://github.com/vojtechkostal/BayesicForceFields"

[project.scripts]
bff = "bff.cli:app"

[project.optional-dependencies]
notebook = [
  "ipykernel",
  "ipython",
  "ipywidgets",
  "jupyterlab",
  "notebook",
]
dev = [
  "build",
  "pytest",
  "ruff",
  "twine",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "pymdown-extensions",
]

[build-system]
requires = ["setuptools>=61", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bff*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
